<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity"
    android:padding="10dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo_app"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/email"
        android:padding="7dp"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:hint="@string/emailLogin"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:background="@drawable/background_input_text"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/password"
        android:padding="7dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:hint="@string/PassWord"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_input_text"
        android:autofillHints="password"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/SignUpButton"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/SignUp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/background_button"/>
    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/login_icon"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/Login"/>
    </LinearLayout>
</LinearLayout>