<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_logo_app"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="10sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Xin Chào,"
            android:id="@+id/helloUser"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dontMe"
            android:text="@string/your_text_reference"
            android:layout_gravity="center"/>
    </LinearLayout>
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/background_input_text"
        android:hint="@string/emailLogin"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/black"
        android:visibility="visible" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTintMode="multiply"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:padding="7dp"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:hint="@string/PassWord"
            android:background="@drawable/background_input_text"
            android:autofillHints="password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/loginButton"
            android:layout_width="350dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/Login"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/background_button"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/fingerprintButton"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_fingerprint_24"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quên mật khẩu"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:textSize="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/add_new_user"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/SignUp"/>
    </LinearLayout>
</LinearLayout>